Moved files around

--- a/service/package.json
+++ b/service/package.json
@@ -2,7 +2,7 @@
   "name": "provider",
   "private": true,
   "workspaces": [
-    "src/*"
+    "packages/*"
   ],
   "scripts": {
     "dev": "bun run src/api/index.ts"
