--- a/service/packages/api/Dockerfile
+++ b/service/packages/api/Dockerfile
@@ -8,12 +8,16 @@ WORKDIR /app
 FROM base AS install
 RUN mkdir -p /temp/dev
 COPY package.json bun.lockb /temp/dev/
+COPY packages/api/package.json /temp/dev/packages/api/
+COPY packages/core/package.json /temp/dev/packages/core/
 RUN cd /temp/dev && bun install --frozen-lockfile
 
 # install with --production (exclude devDependencies)
 RUN mkdir -p /temp/prod
 COPY package.json bun.lockb /temp/prod/
-RUN cd /temp/prod && bun install --production --frozen-lockfile
+COPY packages/api/package.json /temp/prod/packages/api/
+COPY packages/core/package.json /temp/prod/packages/core/
+RUN cd /temp/prod && bun install 
 
 # copy node_modules from temp directory
 # then copy all (non-ignored) project files into the image
@@ -21,13 +25,13 @@ FROM base AS prerelease
 COPY --from=install /temp/dev/node_modules node_modules
 COPY . .
 
-# copy production dependencies and source code into final image
+# # copy production dependencies and source code into final image
 FROM base AS release
 COPY --from=install /temp/prod/node_modules node_modules
-COPY --from=prerelease /app/src/ ./
+COPY --from=prerelease /app/packages/ ./
 COPY --from=prerelease /app/package.json .
 
 # run the app
 USER bun
 EXPOSE 3000/tcp
-ENTRYPOINT [ "bun", "run", "index.ts" ]
+ENTRYPOINT [ "bun", "run", "api/index.ts" ]
