--- a/service/packages/core/package.json
+++ b/service/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "core",
-  "module": "index.ts",
+  "version": "0.0.0",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
