--- a/service/package.json
+++ b/service/package.json
@@ -5,6 +5,8 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "bun run src/api/index.ts"
+    "dev": "bun --watch run packages/api/index.ts",
+    "db:generate": "drizzle-kit generate --config=./packages/core/drizzle.config.ts",
+    "db:migrate": "bun run packages/core/db/migrate.ts"
   }
 }
