--- a/service/packages/api/package.json
+++ b/service/packages/api/package.json
@@ -9,7 +9,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.6.3",
-    "core": "workspace:core"
+    "@hono/zod-openapi": "^0.16.4",
+    "core": "workspace:*",
+    "hono": "^4.6.3"
   }
 }
