--- a/service/packages/api/package.json
+++ b/service/packages/api/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.16.4",
-    "core": "workspace:*",
+    "@service/core": "workspace:*",
     "hono": "^4.6.3"
   }
 }
